[gd_scene load_steps=3 format=3 uid="uid://drctqqgxncvhj"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_lfv84"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cytet"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("itemListChar", "itemListFeitico", "labelNomeChar", "labelAtributoConj", "labelBBA", "labelErroCharNull")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfv84")
itemListChar = NodePath("Panel/VBoxCriarChar/ItemListPersonagens")
itemListFeitico = NodePath("Panel/VBoxMagia/ItemListMagias")
labelNomeChar = NodePath("Panel/panelDetalhesChar/labelNomePersonagem")
labelAtributoConj = NodePath("Panel/panelDetalhesChar/labelAtributoConj")
labelBBA = NodePath("Panel/panelDetalhesChar/labelBBA")
labelErroCharNull = NodePath("Panel/VBoxMagia/HBoxContainer/labelErroCharNSelecionado")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="panelDetalhesChar" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516
anchor_top = 0.131
anchor_right = 0.772
anchor_bottom = 0.319
offset_left = 0.567993
offset_top = 0.111992
offset_right = -0.343994
offset_bottom = 0.287994
theme_override_styles/panel = SubResource("StyleBoxFlat_cytet")
metadata/_edit_use_anchors_ = true

[node name="labelNomePersonagem" type="Label" parent="Panel/panelDetalhesChar"]
layout_mode = 0
offset_left = 76.0
offset_top = 6.0
offset_right = 176.0
offset_bottom = 29.0
text = "Nome"

[node name="labelAtributoConj" type="Label" parent="Panel/panelDetalhesChar"]
layout_mode = 0
offset_left = 4.0
offset_top = 47.0
offset_right = 189.0
offset_bottom = 70.0
text = "Modificador do Atributo de Conjuração:"

[node name="labelBBA" type="Label" parent="Panel/panelDetalhesChar"]
layout_mode = 0
offset_left = 4.0
offset_top = 74.0
offset_right = 181.0
offset_bottom = 97.0
text = "Bônus Base de Ataque:"

[node name="VBoxCriarChar" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.116
anchor_right = 0.319
anchor_bottom = 0.816
offset_left = -0.216003
offset_top = -0.167999
offset_right = 0.511993
offset_bottom = 0.231995
metadata/_edit_use_anchors_ = true

[node name="labelPersonagens" type="Label" parent="Panel/VBoxCriarChar"]
layout_mode = 2
text = "Personagens"
horizontal_alignment = 1

[node name="ItemListPersonagens" type="ItemList" parent="Panel/VBoxCriarChar"]
custom_minimum_size = Vector2(215, 392)
layout_mode = 2

[node name="buttonCriarPersonagem" type="Button" parent="Panel/VBoxCriarChar"]
layout_mode = 2
text = "Criar Personagem"

[node name="VBoxMagia" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.418
anchor_top = 0.326
anchor_right = 0.828
anchor_bottom = 0.816
offset_left = -0.536011
offset_top = -0.248001
offset_right = 0.143921
offset_bottom = 0.231995
metadata/_edit_use_anchors_ = true

[node name="labelMagias" type="Label" parent="Panel/VBoxMagia"]
layout_mode = 2
text = "Magias:"

[node name="ItemListMagias" type="ItemList" parent="Panel/VBoxMagia"]
custom_minimum_size = Vector2(460, 256)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxMagia"]
layout_mode = 2

[node name="ButtonCriarMagia" type="Button" parent="Panel/VBoxMagia/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Criar Magia"

[node name="labelErroCharNSelecionado" type="Label" parent="Panel/VBoxMagia/HBoxContainer"]
visible = false
layout_mode = 2
text = "Por favor, selecione um feiticeiro"

[connection signal="item_selected" from="Panel/VBoxCriarChar/ItemListPersonagens" to="." method="_on_item_list_personagens_item_selected"]
[connection signal="pressed" from="Panel/VBoxCriarChar/buttonCriarPersonagem" to="." method="_on_button_criar_personagem_pressed"]
[connection signal="item_selected" from="Panel/VBoxMagia/ItemListMagias" to="." method="_on_item_list_magias_item_selected"]
[connection signal="pressed" from="Panel/VBoxMagia/HBoxContainer/ButtonCriarMagia" to="." method="_on_button_criar_magia_pressed"]
